--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,10 +4,12 @@ html {
   min-height: 1000px;
   font-family: 'helvetica neue';
 }
-
+ul{
+  padding: 0%;
+}
 h1 {
   color: #fff;
-  padding: 10px;
+  /* padding: 10px; */
 }
 
 .box {
@@ -18,7 +20,7 @@ h1 {
   box-shadow: 5px 5px 15px -5px rgba(0, 0, 0, 0.3);
 }
 
-#heading {
+.heading {
   background-color: #A683E3;
   text-align: center;
 }
@@ -41,14 +43,6 @@ input:checked+p {
 
 input[type="checkbox"] {
   margin: 20px;
-}
-
-p {
-  margin: 0;
-  padding: 20px;
-  font-size: 20px;
-  font-weight: 200;
-  color: #00204a;
 }
 
 form {
@@ -117,4 +111,7 @@ footer {
 .lightbox img {
   max-height: 80vh;
   max-width: 80vw;
+}
+ul {
+  list-style-type: none;
 }
